--- a/res_MuSu_4rows/3_[NA, c, MFA_subs]/MSC_allsubs_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_subs).Rmd
+++ b/res_MuSu_4rows/3_[NA, c, MFA_subs]/MSC_allsubs_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_subs).Rmd
@@ -65,17 +65,18 @@ dim(gt); dim(gtlabel)
 **Attack 1**
 
 * In all *subjects* and Even-numbered *sessions* (2 & 4), Reduce within connectivity in Default Mode (Syslabel: 1), Default-FP (1_3) and Default_VAN (1_5).
-    + identify within default connectivity, default-FP and default-VAN
-    + Identify edges that are in odd # subs
+    + identify edges within default connectivity, default-FP and default-VAN
     + Simulate reduced connectivity by dividing edges that were identified by above and reduce 50% of connectivity (/2)
 
 ```{r simattack}
 
 i_edges <- which(is.element(gtlabel$edges_label, c("1","1_3","1_5"))) 
+
+## Commented out code that would be used to only manipulate even-# subjects
 # i_sub <- which(is.element(gtlabel$subjects_label, sprintf("sub%02d", seq(2,length(subj.name),2))))
 # i_attack <- intersect(i_edges, i_sub)
-
 # gt[seq(2, nrow(gt), 2), i_attack] <- gt[seq(2, nrow(gt), 2), i_attack]/2  # reduce 50%
+
 gt[seq(2, nrow(gt), 2), i_edges] <- gt[seq(2, nrow(gt), 2), i_edges]/2  # reduce 50%
 ```
 
@@ -324,7 +325,7 @@ ch1 <- apply(pFi,c(1:2),mean)
 ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
 ```
 
-Note that the EVEN subjects' EVEN numbered sessions are induced with reduced connectivity in default, default-FP and default-VAN.
+Note that ALL subjects' EVEN numbered sessions are induced with reduced connectivity in default, default-FP and default-VAN.
 
 ```{r plot_pf_sess, echo = FALSE}
 #  And plot them on the same factor map:
