--- a/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs_simattack/MuSu_bignet_simattack_4rows_(NA, c, HMFA).Rmd
+++ b/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs_simattack/MuSu_bignet_simattack_4rows_(NA, c, HMFA).Rmd
@@ -330,7 +330,7 @@ ch1 <- apply(pFi,c(1:2),mean)
 ch2 <- gt_preproc %*% (svd.res$ExPosition.Data$pdq$q)
 ```
 
-Note that the EVEN subjects' EVEN numbered sessions are induced with reduced connectivity in default, default-FP and default-VAN.
+Note that ALL subjects' EVEN numbered sessions are induced with reduced connectivity in default, default-FP and default-VAN.
 
 ```{r plot_pf_sess, echo = FALSE}
 #  And plot them on the same factor map:
