--- a/res_MuSu_4rows/11_DoubCent[NC, c, HMFA]/MSC_allsubs_simattack/DoubCent_bignet_simattack_4rows_(NA, c, HMFA-edgetype).rmd
+++ b/res_MuSu_4rows/11_DoubCent[NC, c, HMFA]/MSC_allsubs_simattack/DoubCent_bignet_simattack_4rows_(NA, c, HMFA-edgetype).rmd
@@ -229,8 +229,8 @@ edgCtr12 <- (absCtrEdg[,1] + absCtrEdg[,2])/(svd.res$ExPosition.Data$eigs[1] + s
 
 #--- the important variables are the ones that contribute more than or equal to the average
 importantEdg <- (edgCtr12 >= 1/length(edgCtr12))
-importantEdg1 <- (cI[,1] >= 1/length(cJ[,1]))
-importantEdg2 <- (cI[,2] >= 1/length(cJ[,2]))
+importantEdg1 <- (absCtrEdg[,1] >= 1/length(cJ[,1]))
+importantEdg2 <- (absCtrEdg[,2] >= 1/length(cJ[,2]))
 
 #--- find the between/within description for each network edge
 net.edge <- matrix(NA, nrow = nrow(c_edge),ncol = 1)
@@ -383,6 +383,26 @@ mean.fj.label <- strsplit(sub('(^[^_]+)_(.*)$', '\\1 \\2', rownames(mean.fj)), '
 ### compute means
 mean.edge.fj <- getMeans(mean.fj, mean.fj.label$edge)
 
+### identify important edge-------------------------------------------------------------------
+#--- get the sum of contribution for each edge
+c_commedge <- aggregate(cJ,by = list(commedge = gtlabel$edges_label),sum)
+rownames(c_commedge) <- c_commedge$commedge
+c_commedge <- c_commedge[,-1]
+
+## Find important commedges
+#--- compute the sums of squares of each variable for each component
+absCtrCommEdg <- as.matrix(c_commedge) %*% diag(svd.res$ExPosition.Data$eigs)
+
+#--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
+CommedgCtr12 <- (absCtrCommEdg[,1] + absCtrCommEdg[,2])/(svd.res$ExPosition.Data$eigs[1] + svd.res$ExPosition.Data$eigs[2])
+
+#--- the important variables are the ones that contribute more than or equal to the average
+importantCommEdg <- (CommedgCtr12 >= 1/length(CommedgCtr12))
+importantCommEdg1 <- (absCtrCommEdg[,1] >= 1/length(cJ[,1]))
+importantCommEdg2 <- (absCtrCommEdg[,2] >= 1/length(cJ[,2]))
+
+## identify important edge-----------------------------------------------------------------
+
 ### create array for partial factor scores
 edge.pF <- array(data = NA, 
                  dim = (c(nrow(mean.edge.fj), ncol(mean.fj), length(unique(mean.fj.label$sub)))), 
@@ -456,7 +476,7 @@ plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
 f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
 # plot mean factor scores of network edges
 ### plot the mean factor scores for network edges
-plot.f_edge4pF <- createFactorMap(mean.edge.fj,
+plot.f_edge4pF <- createFactorMap(mean.edge.fj[importantCommEdg,],
                                   constraints = minmaxHelper4Partial(mean.edge.fj,edge.pF),
                                   text.cex = 3) # with t(gt)
 # # partial factor scores for for subjects (subtables)
@@ -517,12 +537,25 @@ plot.CI.f_bw <- MakeCIEllipses(getBoot2plot_edge_bw,
 f_CInetedge_plot03 <- plot.f_bw_imp$zeMap + 
                         plot.CI.f_bw + 
                         f.labels
+
+# get the bootstrap data for each edge
+getBoot2plot_commedge <- BootCube.Comm.edge$BootCube[,c(1,2),]
+
+# plot the CI ellipses
+plot.CI.f_commedge <- MakeCIEllipses(getBoot2plot_commedge,
+                                     names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
+                                     col = adjustcolor("blueviolet",alpha.f = 0.5)
+                                     )
+# create plot
+f_CInetedge_plot04 <- plot.f_edge4pF$zeMap_background + plot.CI.f_commedge + plot.f_edge4pF$zeMap_dots + plot.f_edge4pF$zeMap_text + f.labels
+f_CInetedge_plot04
 ```
 
 ```{r grid_f_netedgeCI_plot, echo=F, fig.height=12, fig.width=12, message=FALSE}
 gridExtra::grid.arrange(as.grob(f_CInetedge_plot01), 
                         as.grob(f_CInetedge_plot02), 
                         as.grob(f_CInetedge_plot03),
+                        as.grob(f_CInetedge_plot04),
                         ncol=2,
                         top = textGrob("Mean factor scores with CIs for significantly contributed edges",
                                        gp=gpar(fontsize=18,font=3)))
