PPT that summarizes simattack results and update WithinActive rmd

--- a/res_MuSu_4rows/16_[NA, c, MFA_activeWithin]/MSC_allsub_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_ActiveWithin).Rmd
+++ b/res_MuSu_4rows/16_[NA, c, MFA_activeWithin]/MSC_allsub_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_ActiveWithin).Rmd
@@ -656,6 +656,24 @@ f_netedge_plot.supp[[i]] <- plot.f_edge.supp$zeMap_background + plot.f_edge.supp
 do.call(grid.arrange, c(f_netedge_plot.supp, ncol=3))
 ```
 
+```{r alledges}
+sub.idx <- gtlabel.supp$subjects_label == "sub01"
+alledge.des <- gtlabel.supp$edges_label[sub.idx]
+all.edge.color <- createColorVectorsByDesign(makeNominalData(as.matrix(alledge.des)))
+f.sub.alledges <- createFactorMap(svd.res.supp$fjj[sub.idx,], axis1 = 1, axis2 = 2,
+                               col.points = all.edge.color$oc,
+                               col.labels = all.edge.color$oc,
+                               constraints = minmaxHelper(mean.fj.supp),
+                               text.cex = 1,
+                               force = 0.5,
+                               title = "sub01")
+
+
+f.sub.alledges$zeMap_background + f.sub.alledges$zeMap_dots + 
+  theme(legend.position = "topright")
+```
+
+
 Note that a network edge with its region edges significantly contribute to the components both positively and negatively results in a significant mean factor score that is close to the origin. Also, a network edge with only few region edges will lead to a small total SS as compared to the total eigenvalues; this type of network edge might not be significant even when being far away from the origin. (This is shown in the chunk named `checkCtr` which is hidden/commented in the .rmd.)
 
 We can also add boostrap intervals for the factor scores
