Check results for component 3

--- a/res_MuSu_4rows/16_[NA, c, MFA_activeWithin]/MSC_allsub_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_ActiveWithin).Rmd
+++ b/res_MuSu_4rows/16_[NA, c, MFA_activeWithin]/MSC_allsub_simattack/MuSu_bignet_simattack_4rows_(NA, c, MFA_ActiveWithin).Rmd
@@ -440,28 +440,6 @@ plot.f_sess4pF$zeMap + f.labels + plot.pf_sess$mapColByBlocks
 ```
 
 
-```{r pF.third}
-f.labels.23 <- createxyLabels.gen(x_axis = 2, y_axis = 3,
-                               lambda = svd.res$ExPosition.Data$eigs,
-                               tau = svd.res$ExPosition.Data$t,
-                               axisName = "Dimension ")
-plot.f_sess.23 <- createFactorMap(svd.res$ExPosition.Data$fi,
-                                  axis1 = 2, axis2 = 3,
-                                  constraints = minmaxHelper(apply(pFi,2,rbind), axis1 = 2, axis2 = 3))
-# plot 3rd component
-plot.pf_sess.23 <- createPartialFactorScoresMap(
-  colors4Blocks = rep(c("red","blue"),5),
-  factorScores = svd.res$ExPosition.Data$fi,
-  partialFactorScores = pFi,
-  axis1 = 2, axis2 = 3,
-  names4Partial = subj.name,
-  font.labels = "bold"
-)
-plot.f_sess.23$zeMap + f.labels.23 + plot.pf_sess.23$mapColByBlocks
-
-```
-
-
 To have a clearer view of the factor scores for the subject x edges, we first compute the mean factor scores for the each network edge.
 
 ```{r mean_fj_bootstrap}
@@ -593,6 +571,7 @@ plot.f_impedge <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2 = 2,
                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
 f_netedge_plot03 <- plot.f_impedge$zeMap + f.labels
 
+
 plot.f_impedge.bynet <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2 = 2,
                                   col.points = col4ImportantEdg.bynet[importantEdg,],
                                   col.labels = col4ImportantEdg.bynet[importantEdg,],
@@ -601,6 +580,7 @@ plot.f_impedge.bynet <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2
                                   force = 0.5,
                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
 f_netedge_plot03.5 <- plot.f_impedge.bynet$zeMap + f.labels
+
 
 # plot mean factor scores of subject x edge type
 plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
@@ -611,36 +591,35 @@ plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
                                  title = "Mean factor scores for subject_x_edge types")
 f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
 
-plot.f_bw_imp.supp <- createFactorMap(cbind(mean.fj.bw.supp[,1]-0.00003, mean.fj.bw.supp[,2]), axis1 = 1, axis2 = 2,
-                                 col.points = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
-                                 col.labels = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
-                                 text.cex = 3,
-                                 pch = "\u25D6",
-                                 force = 0.5,
-                                 title = "Mean factor scores for subject_x_edge types")
+# plot.f_bw_imp.supp <- createFactorMap(cbind(mean.fj.bw.supp[,1]-0.00003, mean.fj.bw.supp[,2]), axis1 = 1, axis2 = 2,
+#                                  col.points = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
+#                                  col.labels = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
+#                                  text.cex = 3,
+#                                  pch = "\u25D6",
+#                                  force = 0.5,
+#                                  title = "Mean factor scores for subject_x_edge types")
+# 
+# plot.f_bw_imp.supp.r <- createFactorMap(cbind(mean.fj.bw.supp[,1]+0.00003, mean.fj.bw.supp[,2]), axis1 = 1, axis2 = 2,
+#                                  col.points = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
+#                                  col.labels = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
+#                                  text.cex = 3,
+#                                  pch = "\u25D6",
+#                                  force = 0.5,
+#                                  title = "Mean factor scores for subject_x_edge types")
 
-plot.f_bw_imp.supp.r <- createFactorMap(cbind(mean.fj.bw.supp[,1]+0.00003, mean.fj.bw.supp[,2]), axis1 = 1, axis2 = 2,
-                                 col.points = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
-                                 col.labels = net.edge.col.bysub.supp$gc[rownames(mean.fj.bw.supp),],
-                                 text.cex = 3,
-                                 pch = "\u25D6",
-                                 force = 0.5,
-                                 title = "Mean factor scores for subject_x_edge types")
-
-
-gg <- ggplot(mean.fj.bw.supp) + 
-  geom_text(aes(`Factor 1`, `Factor 2`), label = "\u25D6", colour="red", size=3) +
-geom_text(aes(`Factor 1`, `Factor 2`), label = "\u25D7", colour="blue", size=3)
-
-+
-  geom_text(label = "\u25D2", aes(color = as.character(gear)),  
-            size=10, family = "Arial Unicode MS Regular") +
-  geom_text(label = "\u25D3", colour="blue", 
-            size=10, family = "Arial Unicode MS Regular") + 
+# gg <- ggplot(mean.fj.bw.supp) + 
+#   geom_text(aes(`Factor 1`, `Factor 2`), label = "\u25D6", colour="red", size=3) +
+# geom_text(aes(`Factor 1`, `Factor 2`), label = "\u25D7", colour="blue", size=3)
+# 
+# +
+#   geom_text(label = "\u25D2", aes(color = as.character(gear)),  
+#             size=10, family = "Arial Unicode MS Regular") +
+#   geom_text(label = "\u25D3", colour="blue", 
+#             size=10, family = "Arial Unicode MS Regular") + 
  
 
-f_netedge_plot04.5 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp.supp.r$zeMap_dots + plot.f_bw_imp$zeMap_text + plot.f_bw_imp.supp$zeMap_dots + plot.f_bw_imp.supp$zeMap_text + f.labels
-f_netedge_plot04.5
+f_netedge_plot04.5 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + plot.f_bw_imp.supp$zeMap_dots + plot.f_bw_imp.supp$zeMap_text + f.labels
+# f_netedge_plot04.5
 
 # plot mean factor scores of network edges
 ### plot the mean factor scores for network edges
@@ -790,3 +769,235 @@ gridExtra::grid.arrange(as.grob(f_CInetedge_plot01),
 ```
 
 
+## Component 3
+
+```{r ci.cp3}
+# #--- get the contribution of each component
+# cI <- svd.res$ExPosition.Data$ci
+# cJ <- svd.res$ExPosition.Data$cj
+# 
+# #--- get the sum of contribution for each edge
+# c_edge <- aggregate(cJ,list(edge = gtlabel.act$subjects_edge_label),sum)
+# rownames(c_edge) <- c_edge$edge
+# c_edge <- c_edge[,-1]
+# rownames(cI) <- c(1:nrow(gt))
+# 
+## Find important sessions
+#--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
+sesCtr <- (cI[,1]+cI[,2]+cI[,3])/sum((svd.res$ExPosition.Data$eigs[1:3]))
+
+#--- the important sessions are the ones that contribute more than or equal to the average
+importantSes <- (sesCtr >= 1/length(sesCtr))
+importantSes1 <- (cI[,1] >= 1/length(cI[,1]))
+importantSes2 <- (cI[,2] >= 1/length(cI[,2]))
+importantSes3 <- (cI[,3] >= 1/length(cI[,3]))
+
+#--- color for sessions
+col4ImportantSes <- as.matrix(rep("mediumorchid4",nrow(cI)))  # get colors
+col4NS <- 'gray48'                                            # set color for not significant edges to gray
+col4ImportantSes[!importantSes] <- col4NS                     # replace them in the color vector
+
+## Find important edges
+#--- compute the sums of squares of each variable for each component
+absCtrEdg <- as.matrix(c_edge) %*% diag(svd.res$ExPosition.Data$eigs)
+
+#--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
+edgCtr <- (absCtrEdg[,1] + absCtrEdg[,2] + absCtrEdg[,3])/sum(svd.res$ExPosition.Data$eigs[1:3])
+
+#--- the important variables are the ones that contribute more than or equal to the average
+importantEdg <- (edgCtr >= 1/length(edgCtr))
+importantEdg1 <- (absCtrEdg[,1] >= 1/length(absCtrEdg[,1]))
+importantEdg2 <- (absCtrEdg[,2] >= 1/length(absCtrEdg[,2]))
+importantEdg3 <- (absCtrEdg[,3] >= 1/length(absCtrEdg[,3]))
+
+#--- find the between/within description for each network edge
+net.edge <- matrix(NA, nrow = nrow(c_edge),ncol = 2) %>% data.frame
+for (i in 1:nrow(c_edge)){
+  edge2check <- rownames(c_edge)[i]
+  net.edge[i,1] <- unique(gtlabel.act[which(gtlabel.act$subjects_edge_label == edge2check),"subjects_wb"])
+  net.edge[i,2] <- as.character(unique(gtlabel.act[which(gtlabel.act$subjects_edge_label == edge2check),"edges_label"]))
+}
+colnames(net.edge) <- c("subjects_wb", "network")
+rownames(net.edge) <- rownames(c_edge)
+
+# for supplementary between edges
+supp.edge <- unique(gtlabel.supp$subjects_edge_label)
+net.edge.supp <- matrix(NA, nrow = length(supp.edge),ncol = 2) %>% data.frame
+for (i in 1:length(supp.edge)){
+  edge2check <- supp.edge[i]
+  net.edge.supp[i,1] <- unique(gtlabel.supp[which(gtlabel.supp$subjects_edge_label == edge2check),"subjects_wb"])
+  net.edge.supp[i,2] <- as.character(unique(gtlabel.supp[which(gtlabel.supp$subjects_edge_label == edge2check),"edges_label"]))
+}
+colnames(net.edge.supp) <- c("subjects_wb", "network")
+rownames(net.edge.supp) <- supp.edge
+
+### identify important common edge------------------------------------------------------
+#--- get the sum of contribution for each edge
+c_commedge <- aggregate(cJ,by = list(commedge = gtlabel.act$edges_label),sum)
+rownames(c_commedge) <- c_commedge$commedge
+c_commedge <- c_commedge[,-1]
+
+## Find important commedges
+#--- compute the sums of squares of each variable for each component
+absCtrCommEdg <- as.matrix(c_commedge) %*% diag(svd.res$ExPosition.Data$eigs)
+
+#--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
+CommedgCtr <- rowSums(absCtrCommEdg[,1:3])/sum(svd.res$ExPosition.Data$eigs[1:3])
+
+#--- the important variables are the ones that contribute more than or equal to the average
+importantCommEdg <- (CommedgCtr >= 1/length(CommedgCtr))
+importantCommEdg1 <- (absCtrCommEdg[,1] >= 1/length(cJ[,1]))
+importantCommEdg2 <- (absCtrCommEdg[,2] >= 1/length(cJ[,2]))
+importantCommEdg3 <- (absCtrCommEdg[,3] >= 1/length(cJ[,3]))
+## ------------------------------------------------------------------------------------
+
+#--- create color based on the between/within description for network edges
+## color by subject
+net.edge.col.bysub <- list(oc = as.matrix(plyr::mapvalues(net.edge$subjects_wb,from = unique(net.edge$subjects_wb), to = cols25(10))),
+                     gc = as.matrix(cols25(10)))
+rownames(net.edge.col.bysub$oc) <- rownames(c_edge)
+rownames(net.edge.col.bysub$gc) <- unique(net.edge$subjects_wb)
+
+## color by network
+net.edge.col.bynet <- list(oc = as.matrix(plyr::mapvalues(net.edge$network,from = unique(net.edge$network), to = parcel.list[[1]]$Comm.col$gc)),
+                     gc = as.matrix(parcel.list[[1]]$Comm.col$gc))
+rownames(net.edge.col.bynet$oc) <- rownames(c_edge)
+rownames(net.edge.col.bynet$gc) <- unique(net.edge$network)
+
+## color by subject of supplementary
+net.edge.col.bysub.supp <- list(oc = as.matrix(plyr::mapvalues(net.edge.supp$subjects_wb,from = unique(net.edge.supp$subjects_wb), to = cols25(10))),
+                     gc = as.matrix(cols25(10)))
+rownames(net.edge.col.bysub.supp$oc) <- supp.edge
+rownames(net.edge.col.bysub.supp$gc) <- unique(net.edge.supp$subjects_wb)
+
+#--- color for networks by subjects
+col4ImportantEdg <- net.edge.col.bysub$oc # get colors
+col4NS <- 'gray90' # set color for not significant edges to gray
+col4ImportantEdg[!importantEdg] <- col4NS # replace them in the color vector
+#--- color for networks by networks
+col4ImportantEdg.bynet <- net.edge.col.bynet$oc # get colors
+col4NS.bynet <- 'gray90' # set color for not significant edges to gray
+col4ImportantEdg.bynet[!importantEdg] <- col4NS.bynet # replace them in the color vector
+
+```
+
+### Plots:
+
+#### Row factor scores with partial factor scores:
+
+```{r plot_session_cp3}
+
+f.labels.23 <- createxyLabels.gen(x_axis = 2, y_axis = 3,
+                               lambda = svd.res$ExPosition.Data$eigs,
+                               tau = svd.res$ExPosition.Data$t,
+                               axisName = "Dimension ")
+
+plot.f_sess.23 <- createFactorMap(svd.res$ExPosition.Data$fi,
+                                  axis1 = 2, axis2 = 3,
+                                  constraints = minmaxHelper(apply(pFi,2,rbind), axis1 = 2, axis2 = 3))
+# plot 3rd component
+plot.pf_sess.23 <- createPartialFactorScoresMap(
+  colors4Blocks = rep(c("red","blue"),5),
+  factorScores = svd.res$ExPosition.Data$fi,
+  partialFactorScores = pFi,
+  axis1 = 2, axis2 = 3,
+  names4Partial = subj.name,
+  font.labels = "bold"
+)
+plot.f_sess.23$zeMap + f.labels.23 + plot.pf_sess.23$mapColByBlocks
+```
+
+#### Column factor scores:
+
+```{r plot_f_edge_cp3, echo=FALSE, fig.show = 'hide'}
+# plot all factor scores
+plot.f_edge.cp3 <- createFactorMap(mean.fj, axis1 = 2, axis2 = 3,
+                               col.points = net.edge.col.bysub$oc,
+                               text.cex = 2,
+                               force = 0.5,
+                               title = "All factor scores - colored by subject_x_edge types")
+f_netedge_plot01.cp3 <- plot.f_edge.cp3$zeMap_background + plot.f_edge.cp3$zeMap_dots + f.labels.23
+
+# plot the significantly contributed factor scores
+plot.f_edge_imp.cp3 <- createFactorMap(mean.fj, axis1 = 2, axis2 = 3,
+                                   col.points = col4ImportantEdg,
+                                   col.labels = col4ImportantEdg,
+                                   text.cex = 2,
+                                   force = 0.5,
+                                   title = "Significantly contributed factor scores - colored by subject_x_edge types")
+f_netedge_plot02.cp3 <- plot.f_edge_imp.cp3$zeMap_background + plot.f_edge_imp.cp3$zeMap_dots + f.labels.23
+
+# plot only the significant network edges
+plot.f_impedge.cp3 <- createFactorMap(mean.fj[importantEdg,], axis1 = 2, axis2 = 3,
+                                  col.points = col4ImportantEdg[importantEdg,],
+                                  col.labels = col4ImportantEdg[importantEdg,],
+                                  constraints = plot.f_edge_imp.cp3$constraints,
+                                  text.cex = 2,
+                                  force = 0.5,
+                                  title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
+f_netedge_plot03.cp3 <- plot.f_impedge.cp3$zeMap + f.labels.23
+
+
+plot.f_impedge.bynet.cp3 <- createFactorMap(mean.fj[importantEdg,], axis1 = 2, axis2 = 3,
+                                  col.points = col4ImportantEdg.bynet[importantEdg,],
+                                  col.labels = col4ImportantEdg.bynet[importantEdg,],
+                                  constraints = plot.f_edge_imp.cp3$constraints,
+                                  text.cex = 2,
+                                  force = 0.5,
+                                  title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
+f_netedge_plot03.5.cp3 <- plot.f_impedge.bynet.cp3$zeMap + f.labels.23
+
+
+# plot mean factor scores of subject x edge type
+plot.f_bw_imp.cp3 <- createFactorMap(mean.fj.bw, axis1 = 2, axis2 = 3,
+                                 col.points = net.edge.col.bysub$gc[rownames(mean.fj.bw),],
+                                 col.labels = net.edge.col.bysub$gc[rownames(mean.fj.bw),],
+                                 text.cex = 3,
+                                 force = 0.5,
+                                 title = "Mean factor scores for subject_x_edge types")
+f_netedge_plot04.cp3 <- plot.f_bw_imp.cp3$zeMap_background + plot.f_bw_imp.cp3$zeMap_dots + plot.f_bw_imp.cp3$zeMap_text + f.labels
+
+plot.f_bw_imp.cp3 <- createFactorMap(mean.fj.bw, axis1 = 2, axis2 = 3,
+                                 col.points = net.edge.col.bysub$gc[rownames(mean.fj.bw),],
+                                 col.labels = net.edge.col.bysub$gc[rownames(mean.fj.bw),],
+                                 text.cex = 3,
+                                 force = 0.5,
+                                 title = "Mean factor scores for subject_x_edge types")
+
+ 
+
+f_netedge_plot04.5.cp3 <- plot.f_bw_imp.cp3$zeMap_background + plot.f_bw_imp.cp3$zeMap_dots + plot.f_bw_imp.cp3$zeMap_text + plot.f_bw_imp.supp.cp3$zeMap_dots + plot.f_bw_imp.supp.cp3$zeMap_text + f.labels
+# f_netedge_plot04.5
+
+# plot mean factor scores of network edges
+### plot the mean factor scores for network edges
+plot.f_edge4pF.cp3 <- createFactorMap(mean.edge.fj[importantCommEdg,],
+                                      axis1 = 2, axis2 = 3,
+                                  constraints = minmaxHelper4Partial(mean.edge.fj,edge.pF),
+                                  text.cex = 3) # with t(gt)
+
+
+f_netedge_plot05.cp3 <- plot.f_edge4pF.cp3$zeMap + f.labels.23
+
+plot.f_edge4pF.supp.cp3 <- createFactorMap(mean.edge.fj.supp,
+                                       axis1 = 2, axis2 = 3,
+                                  text.cex = 3) # with t(gt)
+
+f_netedge_plot05.5.cp3 <- plot.f_edge4pF.supp.cp3$zeMap + f.labels.23
+f_netedge_plot06.cp3 <- plot.f_edge4pF.cp3$zeMap + plot.f_edge4pF.supp.cp3$zeMap_dots + f.labels.23
+```
+
+
+```{r grid_f_netedge_plot_cp3, echo=F, fig.height=18, fig.width=12}
+gridExtra::grid.arrange(as.grob(f_netedge_plot01.cp3), 
+                        as.grob(f_netedge_plot02.cp3), 
+                        as.grob(f_netedge_plot03.cp3), 
+                        as.grob(f_netedge_plot03.5.cp3),
+                        as.grob(f_netedge_plot04.cp3), 
+                        as.grob(f_netedge_plot04.5.cp3),
+                        as.grob(f_netedge_plot05.cp3), 
+                        as.grob(f_netedge_plot05.5.cp3),
+                        as.grob(f_netedge_plot06.cp3),
+                        nrow=3,
+                        top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
+```
