--- a/cfDiSTATIS/GordonParcel/GordonParcel_DisTATIS.rmd
+++ b/cfDiSTATIS/GordonParcel/GordonParcel_DisTATIS.rmd
@@ -12,7 +12,7 @@ This attempt perform DiSTATIS on mean connectivity of edges (e.g., mean connecti
 
 ```{r cars, echo = FALSE, include = FALSE}
 suppressMessages(library(psych))
-suppressMessages(library(DistatisR))
+suppressMessages(library(DistatisR)) # 
 suppressMessages(library(tidyr))
 suppressMessages(library(magrittr))
 suppressMessages(library(DistatisR))
@@ -59,7 +59,7 @@ for (i in 1:length(subj.name)){
 }
 
 # Replace InF with 0 (DiSTATIS doesn't like it) - myc 20191113
-all.cubes[is.infinite(all.cubes)] <- 0
+all.cubes[is.infinite(all.cubes)] <- 0.99
 ```
 
 This is a data cube of mean correlations: networks x networks x 4 sessions (2-5)
@@ -83,7 +83,25 @@ session.color <- list(oc = as.matrix(rep(magma(10)[c(3,5,7,8)],10)),
                        gc = as.matrix(rep(magma(10)[c(3,5,7,8)])))
 # plot(x = 1:10, y = rep(1,10), col = magma(10), pch = 19)
 rownames(session.color$oc) <- dimnames(all.cubes)[[3]]
-rownames(session.color$gc) <- paste0("sess",1:4,sep = "")
+rownames(session.color$gc) <-  paste0("sess",1:4,sep = "")
+
+#--- create colors for community in Gordon Parcels---# 
+CommName$CommColor <- NA
+CommName$CommColor[CommName$Community=="Auditory"]          <- "#9933FF"
+CommName$CommColor[CommName$Community=="CinguloOperc"]      <- "#800080"
+CommName$CommColor[CommName$Community=="CinguloParietal"]   <- "#2860b8" # Unkonwm Memory Retrieval
+CommName$CommColor[CommName$Community=="Default"]           <- "#FF0000"
+CommName$CommColor[CommName$Community=="DorsalAttn"]        <- "#00FF00"
+CommName$CommColor[CommName$Community=="FrontoParietal"]    <- "#FFFF00"
+CommName$CommColor[CommName$Community=="None"]              <- "#FFFFFF"
+CommName$CommColor[CommName$Community=="RetrosplenialTemporal"] <- "#fff8b4" # Mediatl Temporal Parietal
+CommName$CommColor[CommName$Community=="Salience"]          <- "#000000"
+CommName$CommColor[CommName$Community=="SMhand"]            <- "#00FFFF"
+CommName$CommColor[CommName$Community=="SMmouth"]           <- "#FF8000"
+CommName$CommColor[CommName$Community=="VentralAttn"]       <- "#008080"
+CommName$CommColor[CommName$Community=="Visual"]            <- "#0000FF"
+
+
 ```
 
 
@@ -163,8 +181,8 @@ f.labels.23 <- createxyLabels.gen(x_axis = 2, y_axis = 3,
                                tau = distatis.res$res4Splus$tau,
                                axisName = "Dimension ")
 # Show plot
-f01.F <- f.graph$zeMap + f.labels
-f01.F.cp3 <- f.graph.23$zeMap + f.labels.23
+f01.F <- f.graph$zeMap_background + f.labels + f.graph$zeMap_dots
+f01.F.cp3 <- f.graph.23$zeMap_background + f.labels.23 + f.graph.23$zeMap_dots
 ```
 
 ```{r plot_fig_f, echo=F, fig.height=8, fig.width= 16}
@@ -227,12 +245,13 @@ pf.sess <- createPartialFactorScoresMap(distatis.res$res4Splus$F,
                                        names4Partial = rownames(session.color$gc))
 
 
-f02.FpF.sub <- f.graph4sub$zeMap_background + pf.sub$mapColByBlocks + f.graph4sub$zeMap_dots + f.graph4sub$zeMap_text + f.labels
+f02.FpF.sub <- f.graph4sub$zeMap_background + pf.sub$mapColByBlocks + f.graph4sub$zeMap_dots + f.labels
 # f02.FpF.sub
-f02.FpF.sess <- f.graph4sess$zeMap_background + pf.sess$mapColByBlocks + f.graph4sess$zeMap_dots + f.graph4sess$zeMap_text + f.labels
+f02.FpF.sess <- f.graph4sess$zeMap_background + pf.sess$mapColByBlocks + f.graph4sess$zeMap_dots + f.labels
 # f02.FpF.sub
 # f02.FpF.sess
 ```
+
 ```{r plot_fig_pF, echo=F, fig.height=8, fig.width= 16}
 gridExtra::grid.arrange(as.grob(f02.FpF.sub), as.grob(f02.FpF.sess), ncol=2)
 ```
@@ -277,9 +296,9 @@ pf.sess.cp3 <- createPartialFactorScoresMap(distatis.res$res4Splus$F,
                                        names4Partial = rownames(session.color$gc))
 
 
-f03.FpF.sub.cp3 <- f.graph4sub.cp3$zeMap_background + pf.sub.cp3$mapColByBlocks + f.graph4sub.cp3$zeMap_dots + f.graph4sub.cp3$zeMap_text + f.labels.23
+f03.FpF.sub.cp3 <- f.graph4sub.cp3$zeMap_background + pf.sub.cp3$mapColByBlocks + f.graph4sub.cp3$zeMap_dots + f.labels.23
 # f02.FpF.sub
-f03.FpF.sess.cp3 <- f.graph4sess.cp3$zeMap_background + pf.sess.cp3$mapColByBlocks + f.graph4sess.cp3$zeMap_dots + f.graph4sess.cp3$zeMap_text + f.labels.23
+f03.FpF.sess.cp3 <- f.graph4sess.cp3$zeMap_background + pf.sess.cp3$mapColByBlocks + f.graph4sess.cp3$zeMap_dots + f.labels.23
 # f02.FpF.sub
 # f02.FpF.sess
 ```
